Bug 493686 - No Backends
Summary: No Backends
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.27.10
Platform: SteamOS Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2024-09-26 11:50 UTC by Jay
Modified: 2025-12-03 01:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
attachment-3124710-0.html (2.01 KB, text/html)
2024-10-01 12:55 UTC, Jay
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jay 2024-09-26 11:50:59 UTC
Application: DiscoverNotifier (5.27.10)

Qt Version: 5.15.12
Frameworks Version: 5.115.0
Operating System: Linux 6.5.0-valve19-1-neptune-65-g8e4b171a9b33 x86_64
Windowing System: X11
Distribution: SteamOS
DrKonqi: 5.27.10 [KCrashBackend]

-- Information about the crash:
Discovery cannot be used to install any apps or system updates because none of its app backends are available. Settings page does not have the missing backends section. SteamOS updated and when going to desktop mode Discover won't work.

The crash can be reproduced every time.

-- Backtrace:
Application: Discover Notifier (DiscoverNotifier), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f751c16e1ad in flatpak_installation_create_monitor () at /usr/lib/libflatpak.so.0
#5  0x00007f7524a206e6 in ??? () at /usr/lib/qt/plugins/discover-notifier/FlatpakNotifier.so
#6  0x00007f7524a20bc9 in ??? () at /usr/lib/qt/plugins/discover-notifier/FlatpakNotifier.so
#7  0x00005646603bb50d in ??? ()
#8  0x00007f752bcbb964 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#9  0x00007f752c9578ff in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#10 0x00007f752bc93ef8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#11 0x00007f752bc98e5b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/libQt5Core.so.5
#12 0x00007f752bcdeec8 in ??? () at /usr/lib/libQt5Core.so.5
#13 0x00007f7529f0df69 in ??? () at /usr/lib/libglib-2.0.so.0
#14 0x00007f7529f6c3a7 in ??? () at /usr/lib/libglib-2.0.so.0
#15 0x00007f7529f0c162 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#16 0x00007f752bce2d0c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#17 0x00007f752bc92c04 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#18 0x00007f752bc940a3 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#19 0x00005646603b7197 in ??? ()
#20 0x00007f752b443cd0 in ??? () at /usr/lib/libc.so.6
#21 0x00007f752b443d8a in __libc_start_main () at /usr/lib/libc.so.6
#22 0x00005646603b7325 in ??? ()
[Inferior 1 (process 7167) detached]

Reported using DrKonqi
Comment 1 Aleix Pol 2024-09-29 16:37:46 UTC
I'll address the issue reported by this backtrace, but this won't seem to address the fact that Discover isn't working for you on SteamOS.
Comment 2 Bug Janitor Service 2024-09-29 16:52:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/946
Comment 3 Harald Sitter 2024-10-01 12:43:42 UTC
What's the output of `flatpak -vvv remote-ls` ?
Comment 4 Jay 2024-10-01 12:55:40 UTC
Created attachment 174271 [details]
attachment-3124710-0.html

Thank you for all of your hard work. I reimaged the Steam deck and restored it to factory settings. Discover is fully functional now.

Yahoo Mail: Search, organise, conquer 
 
  On Tue, 1 Oct 2024 at 7:43, Harald Sitter<bugzilla_noreply@kde.org> wrote:   https://bugs.kde.org/show_bug.cgi?id=493686

Harald Sitter <sitter@kde.org> changed:

          What    |Removed                    |Added
----------------------------------------------------------------------------
                CC|                            |sitter@kde.org

--- Comment #3 from Harald Sitter <sitter@kde.org> ---
What's the output of `flatpak -vvv remote-ls` ?
Comment 5 Aleix Pol 2025-10-16 22:56:21 UTC
Git commit e493d9b2d7fa153d4f9c71623831e471179f327e by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 16/10/2025 at 22:56.
Pushed by apol into branch 'master'.

flatpak: Simplify flatpak notifier initialisation

An installation might be missing and that's perfectly fine.

M  +26   -31   libdiscover/backends/FlatpakBackend/FlatpakNotifier.cpp
M  +2    -2    libdiscover/backends/FlatpakBackend/FlatpakNotifier.h

https://invent.kde.org/plasma/discover/-/commit/e493d9b2d7fa153d4f9c71623831e471179f327e
Comment 6 David Edmundson 2025-11-05 10:01:33 UTC
*** Bug 511602 has been marked as a duplicate of this bug. ***
Comment 7 Aleix Pol 2025-12-03 01:46:56 UTC
Git commit bdd6390b8e7487f01f484c77649d341e846f63b2 by Aleix Pol.
Committed on 03/12/2025 at 01:05.
Pushed by apol into branch 'Plasma/6.5'.

flatpak: Simplify flatpak notifier initialisation

An installation might be missing and that's perfectly fine.

M  +26   -31   libdiscover/backends/FlatpakBackend/FlatpakNotifier.cpp
M  +2    -2    libdiscover/backends/FlatpakBackend/FlatpakNotifier.h

https://invent.kde.org/plasma/discover/-/commit/bdd6390b8e7487f01f484c77649d341e846f63b2