flatpak: Simplify flatpak notifier initialisation

An installation might be missing and that's perfectly fine.

BUG: 493686